Fixed issues. Still without tests.